# api/v2/oas_server_gen.go
@@ -20,6 +20,12 @@ type Handler interface {
 	//
 	// POST /add-project
 	AddProject(ctx context.Context, req *AddProjectRequest) error
+	// ImportOrganizations implements importOrganizations operation.
+	//
+	// Import organization hierarchy.
+	//
+	// POST /import-organizations
+	ImportOrganizations(ctx context.Context, req ImportOrganizationsRequest) error
 	// NewError creates *ErrorStatusCode from error returned by handler.
 	//
 	// Used for common default response.
